# slimcap

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
proto/foxglove/: CompressedImage.proto  CompressedVideo.proto
src/: cdr.rs  cli.rs  detect.rs  encoder.rs  main.rs  ordered.rs  pb.rs  pipeline.rs
src/pb_gen/: foxglove.rs
tools/: regen_proto.sh  validate.py
